--- a/luce_vm/Vagrantfile
+++ b/luce_vm/Vagrantfile
@@ -33,6 +33,14 @@ Vagrant.configure("2") do |config|
     lucevm.vm.network :forwarded_port, guest: 8001, host: 8001
     lucevm.vm.network :forwarded_port, guest: 8002, host: 8002
 
+    lucevm.vm.network :forwarded_port, guest: 8080, host: 8080
+    lucevm.vm.network :forwarded_port, guest: 5001, host: 5001
+
+
+
+
+
+
     # ==== VirtualBox CONFIGURATION ====
 
     lucevm.vm.provider "virtualbox" do |vb|
@@ -63,7 +71,7 @@ Vagrant.configure("2") do |config|
     	lucevm.vbguest.auto_update = false
     end
 
-    # ==== SCRIPTS TO RUN AFTER STARTUP ====
+    # ==== SCRIPTS TO RUN AFTER STARTUP   ====
 
     lucevm.vm.provision :shell, path: "./scripts/bootstrap_custom_lucevm.sh"
 
