--- a/luce_vm/luce_django/luce/requirements.txt
+++ b/luce_vm/luce_django/luce/requirements.txt
@@ -25,7 +25,7 @@ djangorestframework==3.12.4
 entrypoints==0.3
 eth-abi==1.3.0
 eth-account==0.3.0
-eth-hash==0.2.0
+# eth-hash==0.2.0
 eth-keyfile==0.5.1
 eth-keys==0.2.4
 eth-rlp==0.1.2
@@ -76,7 +76,7 @@ Pillow==9.0.1
 prometheus-client==0.7.1
 prompt-toolkit==2.0.9
 protobuf==3.19.4
-psycopg2==2.7.6.1
+psycopg2
 ptyprocess==0.6.0
 py-solc-x==1.1.1
 pycparser==2.21
@@ -87,7 +87,7 @@ pyrsistent==0.14.11
 python-dateutil==2.8.0
 pytz==2019.1
 PyYAML==5.1.1
-pyzmq==18.0.0
+pyzmq
 qtconsole==4.5.2
 requests==2.22.0
 rlp==1.1.0
