Integrate brownie as a package

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,27 @@
 version: '3'
 services:
 
-  # ganache_db:
-  #   image: trufflesuite/ganache-cli
-  #   restart: unless-stopped
-  #   command: --mnemonic luce --db /ganache_db --networkId 72 --host 0.0.0.0 --port 8544 --accounts 10 --defaultBalanceEther 1000000 --account "0x5714ad5f65fb27cb0d0ab914db9252dfe24cf33038a181555a7efc3dcf863ab3,1000000000000000000000000" --account "0xad740a17686169082f3148dcec143e4730fc69a636d710cb8e4e23ef966feadd,1000000000000000000000000" --account "0xdd11160def74259a8cfcb0282702ab65c1388cf4e0265f567fe0a3707957d810,1000000000000000000000000"
-  #   ports:
-  #     - 8545:8545
-  #   environment:
-  #     - VIRTUAL_PORT=8545
-  #     - VIRTUAL_HOST=ganache.luce.137.120.31.102.nip.io
-  #     - LETSENCRYPT_HOST=ganache.luce.137.120.31.102.nip.io
-  #   volumes: 
-  #     - ${STORAGE_PATH:-./data}/ganache_db:/ganache_db
+  ganache_db:
+    image: trufflesuite/ganache:v7.7.3
+    restart: unless-stopped
+    command: --database.dbPath /ganache_db --chain.networkId 72 -h 0.0.0.0 -e 1000000
+    ports:
+      - 8545:8545
+    environment:
+      - VIRTUAL_PORT=8545
+      - VIRTUAL_HOST=ganache.luce.137.120.31.102.nip.io
+      - LETSENCRYPT_HOST=ganache.luce.137.120.31.102.nip.io
+    volumes:
+      - ${STORAGE_PATH:-./data}/ganache_db:/ganache_db
 
 
   postgres_db:
     image: postgres
     restart: unless-stopped
-    # depends_on: 
-    #   - ganache_db
-    ports:
-      - 5433:5432
+    depends_on: 
+      - ganache_db
+    # ports:
+    #   - 5433:5432
     environment:
       - POSTGRES_PASSWORD=luce
       - POSTGRES_USER=vagrant
@@ -31,32 +31,34 @@ services:
       - ./luce_vm/.config/init_postgres:/docker-entrypoint-initdb.d
 
 
-  # luce_server:
-  #   build: .
-  #   # image: vjaiman/luce
-  #   depends_on: 
-  #     - postgres_db
-  #     - ganache_db
-  #   ports:
-  #     - "8000:8000"
-  #   restart: unless-stopped
-  #   environment:
-  #     - JUPYTER_TOKEN=luce
-  #     # Nginx reverse proxy
-  #     - VIRTUAL_PORT=8000
-  #     - VIRTUAL_HOST=luce.137.120.31.102.nip.io
-  #     - LETSENCRYPT_HOST=luce.137.120.31.102.nip.io
-  #     # PostgreSQL config
-  #     - DJANGO_USE_PSQL=true
-  #     - POSTGRES_PASSWORD=luce
-  #     - POSTGRES_USER=vagrant
-  #     - POSTGRES_DB=lucedb
-  #     # Ideally the users/password should be defined here
-  #     # And automatically added to the database at start
-  #     - PROVIDER_USER=provider@luce.com
-  #     - PROVIDER_PASSWORD=provider
-  #     - REQUESTER_USER=requester@luce.com
-  #     - REQUESTER_PASSWORD=requester
+  luce_server:
+    build: .
+    # image: vjaiman/luce
+    depends_on: 
+      - postgres_db
+      - ganache_db
+    ports:
+      - 8000:8000
+    restart: unless-stopped
+    volumes:
+  
+    environment:
+      - JUPYTER_TOKEN=luce
+      # Nginx reverse proxy
+      - VIRTUAL_PORT=8000
+      - VIRTUAL_HOST=luce.137.120.31.102.nip.io
+      - LETSENCRYPT_HOST=luce.137.120.31.102.nip.io
+      # PostgreSQL config
+      - DJANGO_USE_PSQL=true
+      - POSTGRES_PASSWORD=luce
+      - POSTGRES_USER=vagrant
+      - POSTGRES_DB=lucedb
+      # Ideally the users/password should be defined here
+      # And automatically added to the database at start
+      - PROVIDER_USER=provider@luce.com
+      - PROVIDER_PASSWORD=provider
+      - REQUESTER_USER=requester@luce.com
+      - REQUESTER_PASSWORD=requester
 
   # jupyterlab:
   #   # image: jupyter/base-notebook
