Untrack brownie output

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ data
 # Ignore database and migrations
 luce_vm/luce_django/luce/db.sqlite3
 luce_vm/luce_django/luce/accounts/migrations/*
+luce_vm/brownie/build
 
 
 # Exlude internal vagrant directories
