--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 .idea
 data
 
+luce_vm/js/node_modules/
+
 # Ignore database and migrations
 luce_vm/luce_django/luce/db.sqlite3
 luce_vm/luce_django/luce/accounts/migrations/*
@@ -50,3 +52,5 @@ ubuntu-xenial-16.04-cloudimg-console.log
  django_vm/**
  luce_vm/**
 /luce_wild/**
+
+js/node_modules/
