fix the issue of account balance is 0 ETH

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   ganache_db:
     image: trufflesuite/ganache:v7.7.3
     restart: unless-stopped
-    command: --database.dbPath /ganache_db --chain.networkId 72 -h 0.0.0.0 -e 1000000
+    command: --database.dbPath /ganache_db --chain.chainId 72 -h 0.0.0.0 -e 1000000
     ports:
       - 8545:8545
     environment:
