--- a/luce_vm/js/package.json
+++ b/luce_vm/js/package.json
@@ -12,7 +12,7 @@
     "build:circuit:contract": "npx snarkjs zkey export solidityverifier src/commitment_final.zkey src/PlonkVerifier.sol",
     "build:circuit": "mkdir -p build/circuits && npm run build:circuit:compile && npm run build:circuit:setup && npm run build:circuit:contract",
     "build": "npm run build:circuit",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --max-old-space-size=4000"
   },
   "author": "",
   "license": "ISC",
@@ -25,6 +25,9 @@
     "big-integer": "^1.6.42",
     "koa": "^2.13.0",
     "koa-router": "12.0.0",
-    "koa-bodyparser": "4.4.0"
+    "koa-bodyparser": "4.4.0",
+    "circom_tester": "^0.0.13",
+    "mocha": "^9.1.3",
+    "chai": "^4.3.4"
   }
 }
