--- a/luce_vm/luce_django/luce/requirements.txt
+++ b/luce_vm/luce_django/luce/requirements.txt
@@ -1,112 +1,11 @@
-aiohttp==3.8.1
-aiosignal==1.2.0
-async-timeout==4.0.2
-asynctest==0.13.0
-attrdict==2.0.1
-attrs==19.1.0
-backcall==0.1.0
-base58==2.1.1
-bitarray==1.2.2
-bleach==3.1.0
-certifi==2019.6.16
-cffi==1.15.0
-chardet==3.0.4
-charset-normalizer==2.0.11
-cryptography==36.0.1
-cycler==0.11.0
-cytoolz==0.11.2
-decorator==4.4.0
-defusedxml==0.6.0
-Django==2.2
-django-cors-headers==3.11.0
-django-extensions==2.2.1
-django-filter==21.1
-djangorestframework==3.12.4
-entrypoints==0.3
-eth-abi==1.3.0
-eth-account==0.3.0
-# eth-hash==0.2.0
-eth-keyfile==0.5.1
-eth-keys==0.2.4
-eth-rlp==0.1.2
-eth-typing==2.3.0
-eth-utils==1.10.0
-fonttools==4.29.1
-frozenlist==1.3.0
+Brownie==0.5.1
+Django==4.1.12
+djangorestframework==3.14.0
+hexbytes==0.2.3
 hexbytes==0.2.0
-idna==2.8
-importlib-metadata==4.10.1
-ipfshttpclient==0.8.0a2
-ipykernel==5.1.1
-ipython==7.6.1
-ipython-genutils==0.2.0
-ipywidgets==7.5.0
-jedi==0.13.3
-Jinja2==2.10.1
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==5.3.1
-jupyter-console==6.0.0
-jupyter-contrib-core==0.3.3
-jupyter-contrib-nbextensions==0.5.1
-jupyter-core==4.5.0
-jupyter-highlight-selected-word==0.2.0
-jupyter-latex-envs==1.4.4
-jupyter-nbextensions-configurator==0.4.1
-kiwisolver==1.3.2
-lru-dict==1.1.6
-lxml==4.4.0
-MarkupSafe==1.1.1
 matplotlib==3.5.1
-mistune==0.8.4
-multiaddr==0.0.9
-multidict==6.0.2
-nbconvert==5.5.0
-nbformat==4.4.0
-netaddr==0.8.0
-notebook==5.7.8
-numpy==1.21.5
-packaging==21.3
-pandocfilters==1.4.2
-parsimonious==0.8.1
-parso==0.5.0
-pexpect==4.7.0
-pickleshare==0.7.5
-Pillow==9.0.1
-prometheus-client==0.7.1
-prompt-toolkit==2.0.9
-protobuf==3.19.4
-psycopg2
-ptyprocess==0.6.0
-py-solc-x==1.1.1
-pycparser==2.21
-pycryptodome==3.8.2
-Pygments==2.4.2
-pyparsing==3.0.7
-pyrsistent==0.14.11
-python-dateutil==2.8.0
-pytz==2019.1
-PyYAML==5.1.1
-pyzmq
-qtconsole==4.5.2
-requests==2.22.0
-rlp==1.1.0
-semantic-version==2.8.5
-Send2Trash==1.5.0
-six==1.12.0
-sqlparse==0.3.0
-terminado==0.8.2
-testpath==0.4.2
-toolz==0.10.0
-tornado==6.0.3
-traitlets==4.3.2
-typing-extensions==4.0.1
+py_solc_x==1.1.1
+Requests==2.31.0
+urllib3==1.26.12
+urllib3==1.26.14
 urllib3==1.25.3
-varint==1.0.2
-wcwidth==0.1.7
-web3==4.9.2
-webencodings==0.5.1
-websockets==6.0
-widgetsnbextension==3.5.0
-yarl==1.7.2
-zipp==3.7.0
