--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -1,14 +1,14 @@
 name: Django CI
 
 on:
+  workflow_dispatch:
   push:
-    branches: [ "master" ]
+    branches: ["master"]
   pull_request:
-    branches: [ "master" ]
+    branches: ["master"]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
@@ -16,15 +16,24 @@ jobs:
         python-version: [3.7, 3.8, 3.9]
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Run Tests
-      run: |
-        python manage.py test
+      - uses: actions/checkout@v3
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install eth-brownie
+          pip install Django==4.1.12
+          pip install django-filter
+          pip install django-extensions
+          pip3 install djangorestframework
+          pip install django-cors-headers
+          pip install psycopg2
+          pip install matplotlib
+          pip install django-haystack
+          pip install Sphinx
+      - name: Run Tests
+        run: |
+          python manage.py test
