--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -23,6 +23,8 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install Dependencies
         run: |
+          apt update
+          apt install nodejs
           python -m pip install --upgrade pip
           pip install eth-brownie
           pip install Django==4.1.12
