add performance metrics

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,5 @@
-version: '3'
+version: "3"
 services:
-
   ganache_db:
     image: trufflesuite/ganache:v7.7.3
     restart: unless-stopped
@@ -14,11 +13,10 @@ services:
     volumes:
       - ${STORAGE_PATH:-./data}/ganache_db:/ganache_db
 
-
   postgres_db:
     image: postgres
     restart: unless-stopped
-    depends_on: 
+    depends_on:
       - ganache_db
     ports:
       - 5432:5432
@@ -26,7 +24,7 @@ services:
       - POSTGRES_PASSWORD=luce
       - POSTGRES_USER=vagrant
       - POSTGRES_DB=lucedb
-    volumes: 
+    volumes:
       - ${STORAGE_PATH:-./data}/postgres_db:/var/lib/postgresql/data
       - ./luce_vm/scripts/init_postgres.sh:/docker-entrypoint-initdb.d/init_postgres.sh
 
@@ -38,7 +36,7 @@ services:
   luce_server:
     build: .
     # image: vjaiman/luce
-    depends_on: 
+    depends_on:
       - postgres_db
       - ganache_db
     ports:
@@ -47,6 +45,8 @@ services:
     volumes:
       - ./:/luce
     environment:
+      # Distinguish between docker and local runtime, which is used in django settings
+      - DOCKER_RUNTIME=true
       - JUPYTER_TOKEN=luce
       # Nginx reverse proxy
       - VIRTUAL_PORT=8000
@@ -79,7 +79,6 @@ services:
   #     - JUPYTER_TOKEN=password
   #     - GRANT_SUDO=yes
   #     - JUPYTER_ENABLE_LAB=yes
-
 
   # ethereum-node:
   #   image: ethereum/client-go
